k8s/service-go.yml
apiVersion: v1
kind: Service
metadata:
  name: wordle-game-app
  labels:
    app: wordle-game-app
spec:
  type: NodePort
  selector:
    app: wordle-game-app
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    nodePort: 30002
