k8s/service-python.yml
apiVersion: v1
kind: Service
metadata:
  name: moscow-time-app
  labels:
    app: moscow-time-app
spec:
  type: NodePort
  selector:
    app: moscow-time-app
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    nodePort: 30001
